# whatsapp.rust

./: .gitignore  README.md  install.ps1  install.sh
.github/workflows/: bump_version.py  check.yml  release.yml
docs/superpowers/: audit-workflow.js  mic-research.js  readme-seo-research.js
docs/superpowers/plans/: 2026-05-30-whatrust.md  2026-06-01-app-lock.md  2026-06-01-shortcut-recorder.md
docs/superpowers/specs/: 2026-05-30-multi-account-build-plan.md  2026-05-30-multi-account-design.md  2026-05-30-whatrust-design.md  2026-06-01-app-lock-design.md  2026-06-01-shortcut-recorder-design.md
scripts/: regen-icons.sh
settings-ui/: comboToAccelerator.test.mjs  hotkey.js  index.html  lock.css  lock.html  lock.js  main.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: lock.json  main-remote.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/resources/: bridge.js  com.yuu5758.whatsapp.rust.policy
src-tauri/src/: accounts.rs  applock.rs  aumid.rs  commands.rs  dlog.rs  lib.rs  lock.rs  main.rs  notify.rs  settings.rs  tray.rs  unread.rs  window.rs
src-tauri/src/biometric/: linux.rs  macos.rs  mod.rs  windows.rs
